turbinec: make Spark conformance reliable
- fix turbine Scala parsing/diagnostics issues
- improve Maven extraction (BOM/property resolution, skip non-jar/SNAPSHOT)
- include scala output dirs and assembly jars on classpath
- support directory classpath entries and compare public Java API only